# minecrevy

./: CODE_OF_CONDUCT.md  Cargo.toml  LICENSE-MIT.md  README.md  rustfmt.toml
.github/workflows/: ci.yml  rust.yml
api/: README.md
api/anvil/: Cargo.toml  README.md
api/anvil/src/: file.rs  io.rs  lib.rs  pos.rs  storage.rs
api/anvil/src/io/: sector.rs  sector_ptr.rs  timestamp.rs
api/auth/: Cargo.toml
api/auth/src/: lib.rs  profile.rs
api/dyn/: Cargo.toml  README.md
api/dyn/src/: lib.rs
api/io_buf/: Cargo.toml  README.md
api/io_buf/src/: blocking.rs  lib.rs  packet.rs  tokio.rs  util.rs
api/io_str/: Cargo.toml  README.md
api/io_str/src/: bitset.rs  enumflags2.rs  glam.rs  impls.rs  lib.rs  macros.rs  nbt.rs  options.rs  read.rs  test.rs  write.rs
api/io_str/src/impls/: collections.rs  flexstr.rs  math.rs  nbt.rs  packet.rs  primitive.rs  tuples.rs  uuid.rs
api/io_str_derive/: Cargo.toml
api/io_str_derive/src/: attr.rs  common.rs  lib.rs  read.rs  util.rs  write.rs
api/key/: Cargo.toml  README.md
api/key/src/: io_str.rs  lib.rs  macros.rs  serde.rs
api/key_macros/: Cargo.toml
api/key_macros/src/: key.rs  lib.rs
api/math/: Cargo.toml
api/math/src/: array.rs  compat.rs  complex.rs  index.rs  lib.rs  matrix.rs  num.rs  vector.rs
api/math/src/compat/: glam.rs  nalgebra.rs
api/math/src/num/: consts.rs  ops.rs  types.rs
api/protocol/: Cargo.toml
api/protocol/src/: lib.rs  packet.rs  registry.rs  state.rs
api/protocol_derive/: Cargo.toml
api/protocol_derive/src/: lib.rs  packet.rs
api/protocol_latest/: Cargo.toml
api/protocol_latest/src/: lib.rs  types.rs
api/protocol_latest/src/client/: handshake.rs  login.rs  mod.rs  play.rs  status.rs
api/protocol_latest/src/server/: login.rs  mod.rs  play.rs  status.rs
api/protocol_latest/src/types/: advancement.rs  chunk.rs  cmd.rs  entity.rs  recipes.rs  scoreboard.rs  world.rs
api/tcp/: Cargo.toml  README.md
api/tcp/src/: client.rs  lib.rs  server.rs  socket.rs  util.rs
api/text/: Cargo.toml
api/text/src/: bow.rs  io_str.rs  json.rs  lib.rs  position.rs  style.rs  text.rs  title.rs
api/util/: Cargo.toml
api/util/src/: bow.rs  difficulty.rs  direction.rs  gamemode.rs  hand.rs  lib.rs  ticks.rs
apps/server/: Cargo.toml
apps/server/src/: main.rs
assets/: default_registry.json
assets/1.20.1/: blocks.schema.json  items.json  items.schema.json
crates/minecrevy_anvil/: Cargo.toml
crates/minecrevy_anvil/src/: lib.rs  pos.rs  region.rs
crates/minecrevy_anvil/src/region/: header.rs  sector.rs  sector_ptr.rs  timestamp.rs
crates/minecrevy_asset/: Cargo.toml  README.md
crates/minecrevy_asset/src/: biome.rs  block.rs  dimension.rs  effect.rs  index.rs  item.rs  lib.rs  mob.rs  particle.rs  potion.rs  recipe.rs  sound.rs  tag.rs  test.rs
crates/minecrevy_asset/src/block/: entity.rs  fluid.rs
crates/minecrevy_asset/src/item/: enchantment.rs  equipment.rs  stack.rs
crates/minecrevy_asset/src/mob/: villager.rs
crates/minecrevy_asset_macros/: Cargo.toml
crates/minecrevy_asset_macros/src/: extract.rs  lib.rs
crates/minecrevy_asset_vanilla/: Cargo.toml
crates/minecrevy_asset_vanilla/src/: block.rs  dimension.rs  item.rs  lib.rs  mob.rs  particle.rs  potion.rs  sound.rs  tag.rs
crates/minecrevy_asset_vanilla/src/block/: entity.rs
crates/minecrevy_asset_vanilla/src/item/: enchantment.rs  equipment.rs
crates/minecrevy_asset_vanilla/src/mob/: villager.rs
crates/minecrevy_asset_vanilla/src/tag/: biome.rs  block.rs  fluid.rs  item.rs  mob_type.rs  villager.rs
crates/minecrevy_bytes/: Cargo.toml
crates/minecrevy_bytes/src/: asynchronous.rs  blocking.rs  codec.rs  lib.rs  packet.rs
crates/minecrevy_chunk/: Cargo.toml
crates/minecrevy_core/: Cargo.toml
crates/minecrevy_core/src/: bow.rs  channel.rs  color.rs  ecs.rs  key.rs  lib.rs  math.rs
crates/minecrevy_io/: Cargo.toml  README.md
crates/minecrevy_io/src/: args.rs  ext.rs  impls.rs  lib.rs  options.rs  packet.rs  std_ext.rs  util.rs  version.rs
crates/minecrevy_io/src/impls/: alloc.rs  core.rs  enumflags2.rs  glam.rs  key.rs  nbt.rs  packet.rs  std.rs  text.rs  tuples.rs  uuid.rs
crates/minecrevy_io/src/packet/: codec.rs
crates/minecrevy_io_macros/: Cargo.toml  README.md
crates/minecrevy_key/: Cargo.toml
crates/minecrevy_key/src/: lib.rs
crates/minecrevy_nbt/: Cargo.toml  README.md
crates/minecrevy_nbt/src/: io.rs  lib.rs
crates/minecrevy_net/: Cargo.toml  README.md
crates/minecrevy_net/examples/: ping.rs
crates/minecrevy_net/src/: client.rs  error.rs  flow.rs  id.rs  lib.rs  packet.rs  plugin.rs  protocol.rs  raw.rs  server.rs
crates/minecrevy_net/src/flow/: handshake.rs  login.rs  status.rs
crates/minecrevy_net/src/protocol/: client.rs  packet.rs  plugin.rs  registry.rs  state.rs  version.rs
crates/minecrevy_net/src/protocol/flow/: handshake.rs  login.rs  status.rs
crates/minecrevy_net/src/raw/: client.rs  plugin.rs  server.rs
crates/minecrevy_protocol/: Cargo.toml  README.md
crates/minecrevy_protocol/src/: common.rs  config.rs  handshake.rs  lib.rs  login.rs  play.rs  registry.rs  state.rs  status.rs  version.rs
crates/minecrevy_protocol/src/c2s/: handshake.rs  login.rs  status.rs
crates/minecrevy_protocol/src/s2c/: login.rs  status.rs
crates/minecrevy_std/: Cargo.toml  README.md
crates/minecrevy_std/src/: config.rs  handshake.rs  lib.rs  login.rs  play.rs  profile.rs  status.rs
crates/minecrevy_text/: Cargo.toml  README.md
crates/minecrevy_text/src/: color.rs  compact.rs  lib.rs  style.rs
data/: default_dimension_codec.json
docs/: RegionFileStructure.md  design.md
docs/spec/: RegionFileStructure.md
examples/: ping.rs  void_lobby.rs
projects/0.2.0-server-list/: Cargo.toml  README.md
projects/0.2.0-server-list/src/: main.rs
projects/0.3.0-void-lobby/: Cargo.toml  README.md
projects/0.3.0-void-lobby/src/: main.rs
scripts/dep-graph/: Cargo.toml
server/config/: Cargo.toml  README.md
server/config/src/: lib.rs
server/ecs/: Cargo.toml  README.md
server/game/: Cargo.toml  README.md
server/net/: Cargo.toml
src/: log.rs  main.rs
(+26 files in other folders)
