[workspace]
members = ["crates/*", "projects/*"]

[workspace.package]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Minecrevy/minecrevy"
repository = "https://github.com/Minecrevy/minecrevy"
edition = "2021"
version = "0.2.0"

[workspace.dependencies]
# workspace
minecrevy_io = { path = "crates/minecrevy_io" }
minecrevy_net = { path = "crates/minecrevy_net" }
minecrevy_protocol = { path = "crates/minecrevy_protocol" }
minecrevy_std = { path = "crates/minecrevy_std" }
minecrevy_text = { path = "crates/minecrevy_text" }
# bevy
bevy = { git = "https://github.com/bevyengine/bevy.git", rev = "813c759" }
# concurrency and networking
flume = "0.11"
futures-util = "0.3"
tokio = "1.34"
tokio-util = "0.7"
# serialization
base64 = "0.22"
byteorder = "1.5"
bytes = "1.5"
serde = "1.0"
serde_json = "1.0"
# logging
tracing = "0.1"
# utilities
glam = "0.29"
image = "0.25"
thiserror = "1.0"
uuid = "1.6"

[package]
name = "minecrevy"
description = "A toolkit for building Minecraft servers in Rust with Bevy."
keywords = ["bevy", "minecraft", "server", "engine", "gamedev"]
categories = ["game-engines"]
version = "0.1.0"
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
# workspace
minecrevy_net = { workspace = true }
minecrevy_protocol = { workspace = true }
minecrevy_std = { workspace = true }
# bevy
bevy = { workspace = true }
# logging
tracing = { workspace = true }

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3