[package]
name = "minecrevy_auth"
version = "0.6i.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["bevy", "reqwest"]

[dependencies]
# required
flexstr = { version = "^0.9", features = ["serde"] }
uuid = { version = "^0.8", features = ["v3"] }
serde = { version = "^1.0", features = ["derive"] }
# feature: bevy
bevy = { version = "^0.6", default-features = false, optional = true }
# feature: reqwest
reqwest = { version = "^0.11", features = ["json"], optional = true }
