[package]
name = "minecrevy_io_str"
version = "0.3.0"
edition = "2021"

[features]
default = ["glam", "nbt", "enumflags2"]
nbt = ["hematite-nbt", "serde"]

[dependencies]
# workspace
minecrevy_io_buf = { path = "../io_buf", features = ["blocking"] }
minecrevy_io_str_derive = { path = "../io_str_derive" }
# types
uuid = "^0.8"
# feature: glam
glam = { version = "^0.20", optional = true }
# feature: nbt
hematite-nbt = { version = "^0.5", optional = true }
serde = { version = "^1.0", optional = true }
# feature: enumflags2
enumflags2 = { version = "^0.7", optional = true }
