[package]
name = "minecrevy_io_str"
version = "0.6.0"
edition = "2021"

[features]
default = ["uuid", "glam", "nbt", "enumflags2", "flexstr", "minecrevy_math"]
nbt = ["hematite-nbt", "serde"]

[dependencies]
# workspace: api
minecrevy_io_buf = { path = "../io_buf", features = ["blocking"] }
minecrevy_io_str_derive = { path = "../io_str_derive" }
# feature: uuid
uuid = { version = "^0.8", optional = true }
# feature: minecrevy_math
minecrevy_math = { path = "../math", optional = true }
# feature: glam
glam = { version = "^0.20", optional = true }
# feature: nbt
hematite-nbt = { version = "^0.5", optional = true }
serde = { version = "^1.0", optional = true }
# feature: enumflags2
enumflags2 = { version = "^0.7", optional = true }
# feature: flexstr
flexstr = { version = "^0.9", optional = true }
