[package]
name = "minecrevy_key"
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A library to parse Minecraft resource keys."
repository = "https://github.com/ItsDoot/minecrevy"
keywords = ["minecraft", "key", "io", "brigadier"]
readme = "README.md"

[features]
default = ["minecrevy_io_str", "serde"]

[dependencies]
# macros
minecrevy_key_macros = { path = "../key_macros" }
# workspace: api
minecrevy_io_str = { path = "../io_str", optional = true }
# serialization
serde = { version = "^1.0", optional = true }
# utils
thiserror = "^1.0"
flexstr = "^0.9"
