[package]
name = "minecrevy_protocol"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# workspace: api
minecrevy_io_buf = { path = "../io_buf" }
minecrevy_io_str = { path = "../io_str" }
minecrevy_protocol_derive = { path = "../protocol_derive" }
# bevy
bevy = { version = "^0.6", default-features = false, optional = true }
