[package]
name = "minecrevy_protocol_derive"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Derive macros for minecrevy_protocol"
repository = "https://github.com/ItsDoot/minecrevy"
keywords = ["derive", "minecraft", "protocol", "packet"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "^1.0"
quote = "^1.0"
syn = "^1.0"
