[package]
name = "minecrevy_protocol_latest"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# workspace: api
minecrevy_io_buf = { path = "../io_buf" }
minecrevy_io_str = { path = "../io_str" }
minecrevy_key = { path = "../key" }
minecrevy_math = { path = "../math" }
minecrevy_protocol = { path = "../protocol" }
minecrevy_text = { path = "../text" }
minecrevy_util = { path = "../util", features = ["minecrevy_io_str"] }
# types
hematite-nbt = "^0.5"
serde = "^1.0"
serde_json = "^1.0"
uuid = "^0.8"
enumflags2 = "^0.7"
flexstr = "^0.9"
thiserror = "^1.0"
