[package]
name = "minecrevy_tcp"
version = "0.6.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A library to bridge async TCP servers/clients with synchronous processing."
repository = "https://github.com/Minecrevy/minecrevy"
keywords = ["minecraft", "tcp", "async", "sync"]
readme = "README.md"

[dependencies]
flume = "^0.10"
tokio = { version = "^1.16", features = ["net"] }
bevy = { version = "^0.6", default-features = false, optional = true }
