[package]
name = "minecrevy_text"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde_json", "minecrevy_io_str"]

[dependencies]
# workspace
minecrevy_io_str = { path = "../io_str", optional = true }
# serialization
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0", optional = true }
# error handling
thiserror = "^1.0"
