[package]
name = "minecrevy_text"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["minecrevy_io_str", "serde_json"]

[dependencies]
# workspace
minecrevy_util = { path = "../util", features = ["serde"] }
# required
flexstr = { version = "^0.9", features = ["serde"] }
serde = { version = "^1.0", features = ["derive"] }
thiserror = "^1.0"
# feature: minecrevy_io_str
minecrevy_io_str = { path = "../io_str", optional = true }
# feature: serde_json
serde_json = { version = "^1.0", optional = true }
