[package]
name = "minecrevy_util"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# workspace: api
minecrevy_math = { path = "../math" }
# required
thiserror = "^1.0"
# feature: minecrevy_io_str
minecrevy_io_str = { path = "../io_str", optional = true }
# feature: serde
serde = { version = "^1.0", optional = true }
# feature: bevy
bevy = { version = "^0.6", default-features = false, optional = true }
