[package]
name = "server"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minecrevy_io = { workspace = true }
minecrevy_net = { workspace = true }
bevy = { workspace = true, default-features = false }