[package]
name = "minecrevy_anvil"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minecrevy_chunk = { workspace = true }
minecrevy_nbt = { workspace = true }
bitvec = { workspace = true }
byteorder = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
schnellru = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }