[package]
name = "minecrevy_asset"
version = "0.1.0"
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# workspace
minecrevy_key = { workspace = true }
minecrevy_nbt = { workspace = true  }
# bevy
bevy = { workspace = true }
# utilities
flexstr = { workspace = true }