[package]
name = "minecrevy_asset_vanilla"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minecrevy_asset = { workspace = true }
minecrevy_core = { workspace = true }
bevy = { workspace = true, default-features = false }