[package]
name = "minecrevy_io"
description = "A library for reading and writing Minecraft protocol types."
keywords = ["bevy", "minecraft", "protocol", "packets"]
categories = ["encoding", "game-development", "network-programming"]
readme = "README.md"
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["codec"]
codec = ["bytes", "tokio-util"]

[dependencies]
# workspace
# external
byteorder = { workspace = true }
bytes = { workspace = true, optional = true }
enumflags2 = { workspace = true }
fastnbt = { workspace = true }
glam = { workspace = true }
tokio-util = { workspace = true, optional = true, features = ["codec"] }
uuid = { workspace = true }