[package]
name = "minecrevy_key"
version = "0.1.0"
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minecrevy_io = { workspace = true }
# serialization
serde = { workspace = true }
# utilities
flexstr = { workspace = true }
thiserror = { workspace = true }