[package]
name = "minecrevy_nbt"
description = "A library for reading and writing NBT files."
keywords = ["bevy", "minecraft", "nbt", "serde", "protocol"]
categories = ["game-development", "encoding", "network-programming"]
version = "0.1.0"
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde"]

[dependencies]
# workspace
minecrevy_io = { workspace = true }
# serialization
byteorder = { workspace = true }
hematite-nbt = "0.5"
cesu8 = "1.1"
flate2 = "1.0"
indexmap = "2.1"
serde = { workspace = true, optional = true }