[package]
name = "minecrevy_nbt"
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
# external
indexmap = { version = "2.6", features = ["serde"] }
byteorder.workspace = true
serde = { workspace = true, features = ["derive"] }