[package]
name = "minecrevy_net"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minecrevy_core = { workspace = true }
minecrevy_io = { workspace = true }
minecrevy_text = { workspace = true }
bevy = { workspace = true, default-features = false }
flume = { workspace = true }
futures-util = { workspace = true, features = ["sink"] }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "rt", "rt-multi-thread", "sync"] }
tokio-util = { workspace = true, features = ["codec"] }
tokio-stream = { workspace = true }
uuid = { workspace = true, features = ["v3"] }