[package]
name = "minecrevy_protocol"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minecrevy_core = { workspace = true }
minecrevy_io = { workspace = true }
minecrevy_text = { workspace = true }
bevy = { workspace = true, default-features = false }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }