[package]
name = "minecrevy_protocol"
description = "A library for current Minecraft version packet definitions."
keywords = ["bevy", "minecraft", "protocol", "packets"]
categories = ["game-development", "network-programming"]
readme = "README.md"
version = "0.1.0"
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# workspace
minecrevy_io = { workspace = true }
minecrevy_net = { workspace = true }
minecrevy_text = { workspace = true }
# bevy
bevy = { workspace = true }
# serialization
serde = { workspace = true }
serde_json = { workspace = true }
# utilities
uuid = { workspace = true }