[package]
name = "minecrevy_std"
description = "A library for standard/universal Minecraft server features."
keywords = ["bevy", "minecraft", "server"]
categories = ["game-development", "network-programming"]
readme = "README.md"
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# workspace
minecrevy_io = { workspace = true }
minecrevy_net = { workspace = true }
minecrevy_protocol = { workspace = true }
minecrevy_text = { workspace = true }
# external
bevy = { workspace = true }
base64 = { workspace = true }
enumflags2 = { workspace = true }
fastnbt = { workspace = true }
hex = "0.4"
image = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }