[package]
name = "minecrevy_text"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde"]

[dependencies]
minecrevy_core = { workspace = true }
enumflags2 = { workspace = true }
ordered-float = { workspace = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true }