[package]
name = "minecrevy_text"
description = "A library for handling Minecraft text components."
keywords = ["bevy", "minecraft", "text", "component"]
categories = ["game-development", "data-structures"]
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# workspace
minecrevy_io = { workspace = true }
# serialization
serde = { workspace = true }
serde_json = { workspace = true }
