[package]
name = "minecrevy_config"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy
bevy = { version = "^0.6", default-features = false }
# serialization
serde = "^1.0"
toml = "^0.5"
# logging
tracing = "^0.1"
