[package]
name = "minecrevy_config"
version = "0.6.0"
edition = "2021"

[dependencies]
# workspace: api
minecrevy_util = { path = "../../api/util", features = ["serde"] }
# bevy
bevy = { version = "^0.6", default-features = false }
# serialization
serde = "^1.0"
toml = "^0.5"
# logging
tracing = "^0.1"
